# deployplex-bot

./: .gitignore  Dockerfile  README.md  capture.pcap  cron_jobs.json  dosei.py  dosei_config.py  pyproject.toml
.dosei/: app.json
bot/: config.py  cron_auth.py  main.py
