[tool.poetry]
name = "deployplex-bot"
version = "0.1.0"
description = "DeployPlex X Bot"
authors = ["Alvaro Molina <am@deployplex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
tweepy = "^4.14.0"
python-dotenv = "^1.0.0"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
