[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Dosei X Bot"
authors = ["Alvaro Molina <am@dosei.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "0.109.2", allow-prereleases = true}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
tweepy = "^4.14.0"
python-dotenv = "^1.0.0"
openai = "^0.28.1"
dosei = {version = "0.0.18a5", allow-prereleases = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
